# RSS-SMAP-V5.0-L2C-Science-Grade

./: LICENSE  README.md  l2b_ascii_file_variable_list.md  l2c_ascii_file_variable_list.md  meson.build  pixel_descriptions.md
.github/workflows/: ci.yaml
L2A/: fd_date_2000.f90
L2B/: check_orbit.f90
L2C/: FDICE4.f90  MAKE_SMAP_L2C_V50_ascii.f90  MATRIX.f90  SMAP_ROUGHNESS_GMF_V3B_module.f90  adjust_tagal_ref.f90  allocate_L2C_arrays_V50.f90  climatology_icemask.f90  correct_cal_drift_V30.f90  correct_reflector_emissivity_V30.f90  create_l2_qcflag_V50.f90  decode_l2b_V50.f90  dir_paths_module.f90  external_files_L2C_module.f90  fd_delta_temp_refl_V3.f90  fd_sss_V50.f90  fd_ta_earth_V50.f90  fd_ta_expected_V50.f90  fd_tb_sur_sic_V50.f90  fd_tb_toa_lc_V50.f90  find_dtb_bias_V50.f90  find_ta_gal_refl.f90  get_filename_l2b_ascii.f90  initialize_APC_V50.f90  l2c_module_smap_V50.f90  land_corr_step2.f90  meissner_wentz_dielectric.f90  openbig.f90  read_l2b_ascii.f90  sss_module.f90  stokes_converters.f90  sun_qc_flag.f90  write_l2c_ascii.f90
sample_data/: sample_l2b_38362_01.txt  sample_l2b_38362_02.txt  sample_l2b_38362_03.txt  sample_l2b_38362_04.txt  sample_l2b_38362_05.txt  sample_l2b_38362_06.txt  sample_l2b_38362_07.txt  sample_l2b_38362_08.txt  sample_l2b_38362_09.txt  sample_l2b_38362_10.txt  sample_l2c_38362_01_output_rss.txt  sample_l2c_38362_02_output_rss.txt  sample_l2c_38362_03_output_rss.txt  sample_l2c_38362_04_output_rss.txt  sample_l2c_38362_05_output_rss.txt  sample_l2c_38362_06_output_rss.txt  sample_l2c_38362_07_output_rss.txt  sample_l2c_38362_08_output_rss.txt  sample_l2c_38362_09_output_rss.txt  sample_l2c_38362_10_output_rss.txt
tables_L2C/: CCMP_RT_minus_Buoy_W_sat_no_sat.txt  SMAP_AMATRIX_V50_TM_MARCH_2022_EARTH_FOV.txt  bad_ancillaries.txt  bad_orbits.txt
